--- a/docs/adr/002.collections_management.md
+++ b/docs/adr/002.collections_management.md
@@ -33,3 +33,13 @@ public IAsyncEnumerable<Transaction> GetTransactionsInRubles(IEnumerable<Transac
 }
 ```
 
+## Counts, Min/Max etc
+Whenever possible, use streaming-like approach to count elements in collection instead of `.ToList()`, `.Min()` etc.
+For example, in case its necessary to find how many elements existed in IEnumerable or get min/max, use `Flow.Domain.Common.Collections.EnumerableWithCount`.
+```
+  var rejected = new EnumerableWithCount<RejectedTransaction>(await accountant.CreateTransactions(initial, ct));
+  ...
+  if (rejected.Count > 0) {
+    ...
+  }
+```
