--- a/docs/adr/002.collections_management.md
+++ b/docs/adr/002.collections_management.md
@@ -39,6 +39,8 @@ For example, in case its necessary to find how many elements existed in IEnumera
 ```
   var rejected = new EnumerableWithCount<RejectedTransaction>(await accountant.CreateTransactions(initial, ct));
   ...
+  await rejectionsWriter.WriteRejections(streamWriter, rejected, args.Format, ct);
+  ...
   if (rejected.Count > 0) {
     ...
   }
