--- a/docs/adr/003.tasks_cancellation.md
+++ b/docs/adr/003.tasks_cancellation.md
@@ -1,6 +1,6 @@
 # Task cancellation
 ## Context
-Most of the operations Flow makes happens asynchronously. The guidelines below define common approach for creation of asynchronous methods
+Most of the operations Flow happens asynchronously. The guidelines below define common approach for creation of asynchronous methods
 
 ## Naming convention
 Do not add `..Async` to method names. All the methods should use asynchronous operations whenever possible so it's redundant.
