--- a/docs/adr/004.plugins.md
+++ b/docs/adr/004.plugins.md
@@ -1,4 +1,4 @@
-# Plugin management
+# Plugin management for transactions context
 
 Status: Draft
 
@@ -7,6 +7,23 @@ Automatic transfers detection logic may vary for different _flow_ users.
 For example, some banks may create a transfers with diffrent source and sink names, which prevents built-in transfers detection from proper transfers detection.
 
 This custom logic should not be placed in core asseblies. Instead, it should be attached as a plug-in.
+
+
+## Considered options
+* No plugin support
+* 3rd party plugin framework (MEF or anything else)
+* DI on Autofac
+* Native tools in .NET
+
+## Pros n cons
+| Option              | Pros                                                                                   | Cons                                                           |
+|---------------------|----------------------------------------------------------------------------------------|---------------------------------------------------------------|
+| No plugin support   | * easy to implement and support<br>* easy to init objects<br>* easy to bundle solution | * all changes will go to core repository                       |
+| 3rd party framework | * no need to support infrastructure code                                               | * nothing useful for NET 6 found                               |
+| DI on Autofac       | * easy to init objects                                                                 | * hard to isolate dependencies<br> * depends on Autofac |
+| Native tools        | * works<br> * no 3rd-party dependencies                                                | * needs to support infrastructure code                         |
+
+As a result, _Native tools_ option was selected as the most realiable way of creating a plugin system
 
 ## Solution overview
 Assembly `Flow.Infrastructure.Plugins.Transactions.Contract` (placed at infrastructure level) contains a definiton of `IPlugin` interface. This interface indicates that particular class is a plugin for _flow_ that provides custom transactions management logic. 
@@ -19,7 +36,5 @@ This assembly depends on `Flow.Domain.Transactions` from domain level, which all
 
 Assembly `FLow.Infrastructure.Plugins.Transactions` contains plug-ins loader and a bridge classes that incorporates plugins into main workflow.
 
-The loader scans a particular folder (defined in _flow_ configuration as `PluginsPath`) and loads all the assemblies into separate loading contexts, and creates a bridge classes.
+The loader scans a particular folder (defined in _flow_ configuration as `PluginsPath`), loads all the assemblies into separate contexts, and creates a bridge classes.
 These bridge classess will then be registered as a part of separate Autofac module.
-
-
