updated docs, loader still WIP

--- a/docs/adr/004.plugins.md
+++ b/docs/adr/004.plugins.md
@@ -34,7 +34,10 @@ Ancestors of `IPlugin` allows to specify plug-in kind:
 
 This assembly depends on `Flow.Domain.Transactions` from domain level, which allows to operate the same domain objects as core logic.
 
-Assembly `FLow.Infrastructure.Plugins.Transactions` contains plug-ins loader and a bridge classes that incorporates plugins into main workflow.
+Assembly `FLow.Infrastructure.Plugins.Transactions.Loader` contains plug-ins loader and a bridge classes that incorporates plugins into main workflow.
 
-The loader scans a particular folder (defined in _flow_ configuration as `PluginsPath`), loads all the assemblies into separate contexts, and creates a bridge classes.
-These bridge classess will then be registered as a part of separate Autofac module.
+The loader scans a particular folder (defined in _flow_ configuration as `PluginsPath`), and loops through subfolders there.
+
+For each subfolders it will try to load assembly with the same name as directory that contains it into separate loading context, then it will try to find all types that are assignable to `IPlugin` and create single instance for each type found.
+
+The loader will register a singletone that implements `Flow.Application.Transaction.Transfers.ITransferDetector` for each instance that implements `ITransferDetectionPlugin`
