--- a/docs/adr/004.plugins.md
+++ b/docs/adr/004.plugins.md
@@ -21,7 +21,7 @@ This custom logic should not be placed in core asseblies. Instead, it should be 
 | No plugin support   | * easy to implement and support<br>* easy to init objects<br>* easy to bundle solution | * all changes will go to core repository                |
 | 3rd party framework | * no need to support infrastructure code                                               | * nothing useful for NET 6 found                        |
 | DI on Autofac       | * easy to init objects                                                                 | * hard to isolate dependencies<br> * depends on Autofac |
-| Native tools        | * works<br> * no 3rd-party dependencies                                                | * needs to support infrastructure code                  |
+| [+] Native tools    | * works<br> * no 3rd-party dependencies                                                | * needs to support infrastructure code                  |
 
 As a result, _Native tools_ option was selected as the most realiable way of creating a plugin system
 
@@ -38,6 +38,9 @@ Assembly `FLow.Infrastructure.Plugins.Transactions.Loader` contains plug-ins loa
 
 The loader scans a particular folder (defined in _flow_ configuration as `PluginsPath`), and loops through subfolders there.
 
-For each subfolders it will try to load assembly with the same name as directory that contains it into separate loading context, then it will try to find all types that are assignable to `IPlugin` and create single instance for each type found.
+For each subfolders it will try to load all assemblies into separate loading context, then it will try to find all types that are assignable to `IPlugin` and create single instance for each type found using `Activator.CreateInstance` method.
 
 The loader will register a singletone that implements `Flow.Application.Transaction.Transfers.ITransferDetector` for each instance that implements `ITransferDetectionPlugin`
+
+Plugins are loaded into separate context and have no access to main DI container by design.
+
