--- a/docs/adr/004.plugins.md
+++ b/docs/adr/004.plugins.md
@@ -1,13 +1,10 @@
 # Plugin management for transactions context
 
-Status: Draft
-
 ## Challenge
 Automatic transfers detection logic may vary for different _flow_ users. 
 For example, some banks may create a transfers with diffrent source and sink names, which prevents built-in transfers detection from proper transfers detection.
 
 This custom logic should not be placed in core asseblies. Instead, it should be attached as a plug-in.
-
 
 ## Considered options
 * No plugin support
@@ -19,7 +16,7 @@ This custom logic should not be placed in core asseblies. Instead, it should be 
 | Option              | Pros                                                                                   | Cons                                                    |
 |---------------------|----------------------------------------------------------------------------------------|---------------------------------------------------------|
 | No plugin support   | * easy to implement and support<br>* easy to init objects<br>* easy to bundle solution | * all changes will go to core repository                |
-| 3rd party framework | * no need to support infrastructure code                                               | * nothing useful for NET 6 found                        |
+| 3rd party framework | * no need to support infrastructure code                                               | * nothing useful for NET 6/7 found                      |
 | DI on Autofac       | * easy to init objects                                                                 | * hard to isolate dependencies<br> * depends on Autofac |
 | [+] Native tools    | * works<br> * no 3rd-party dependencies                                                | * needs to support infrastructure code                  |
 
