--- a/docs/adr/004.plugins.md
+++ b/docs/adr/004.plugins.md
@@ -23,7 +23,8 @@ This custom logic should not be placed in core asseblies. Instead, it should be 
 As a result, _Native tools_ option was selected as the most realiable way of creating a plugin system
 
 ## Solution overview
-Assembly `Flow.Infrastructure.Plugins.Transactions.Contract` (placed at infrastructure level) contains a definiton of `IPlugin` interface. This interface indicates that particular class is a plugin for _flow_ that provides custom transactions management logic. 
+[!] Implementation was revisited in [005](./005.plugins-revisited.md).
+Assembly `Flow.Infrastructure.Plugins.Transactions.Contract` (placed at infrastructure level) contains a definition of `IPlugin` interface. This interface indicates that particular class is a plugin for _flow_ that provides custom transactions management logic. 
 
 Ancestors of `IPlugin` allows to specify plug-in kind:
 * `ITransferDetectionPlugin` indicates that a plugin performs custom transfers detection
@@ -40,4 +41,3 @@ For each subfolders it will try to load all assemblies into separate loading con
 The loader will register a singletone that implements `Flow.Application.Transaction.Transfers.ITransferDetector` for each instance that implements `ITransferDetectionPlugin`
 
 Plugins are loaded into separate context and have no access to main DI container by design.
-
