--- a/docs/adr/005.plugins-revisited.md
+++ b/docs/adr/005.plugins-revisited.md
@@ -54,8 +54,7 @@ Now, the sample plugin looks like this:
 ```c#
 // plugin.cs
 
-//no need to make plugin type public anymore
-internal sealed class CustomTransferDetector:IPlugin, ITransferDetector
+public sealed class CustomTransferDetector:IPlugin, ITransferDetector
 {
     /// ...implementation of ItransferDetector
 }
