fixed plugins init

--- a/docs/adr/005.plugins-revisited.md
+++ b/docs/adr/005.plugins-revisited.md
@@ -60,9 +60,9 @@ public sealed class CustomTransferDetector:IPlugin, ITransferDetector
 }
 
 // will be created using Activator.CreateInstance(...);
-public sealed class Bootstrapper : IPluginsBootstrapper<CustomTransferDetector> 
+public sealed class Bootstrapper : IPluginsBootstrapper 
 {
-    IEnumerable<CustomTransferDetector> GetPlugins() 
+    IEnumerable<IPlugin> GetPlugins() 
     {
         yield return new CustomTransferDetector();    
     }
@@ -71,4 +71,5 @@ public sealed class Bootstrapper : IPluginsBootstrapper<CustomTransferDetector>
 
 ## Drawbacks
 * No way to ensure in compile time that a reader or particular writer is defined - infrastructure relies on DI and generic types, so there may be surprises in a runtime
-* Configuration became more challenging - now user needs to provide an editor for a custom format by himself 
+* Configuration became more challenging - now user needs to provide an editor for a custom format by himself
+* A type `Flow.Application.Transactions.Contract.IncomingTransaction` was introduced due to following interface resolution issue: turned out that Autofac is unable to resolve `IFormatSpecificReader<(Transaction,Overrides?)>` if ValueTuple was defined in a different assembly.  
